<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/md_white_1000"
    tools:context=".ui.currencyConverter.CurrencyConverterFragment">

    <TextView
        android:id="@+id/txtConverter"
        style="@style/TextAppearance.AppCompat.Medium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="20dp"
        android:text="@string/app_name"
        android:textColor="@color/md_black_1000"
        android:textStyle="normal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilAmount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:background="@color/white"
        app:layout_constraintTop_toBottomOf="@+id/txtConverter"
        app:layout_constraintLeft_toLeftOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtAmount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_amount_here_in_usd"
            android:inputType="numberDecimal"/>
    </com.google.android.material.textfield.TextInputLayout>
    <androidx.appcompat.widget.AppCompatSpinner
        android:id="@+id/spinnerCurrency"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="@+id/btnConvert"
        app:layout_constraintRight_toLeftOf="@+id/btnConvert"
        android:spinnerMode="dialog"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        app:layout_constraintTop_toBottomOf="@+id/tilAmount"/>
    <Button
        android:id="@+id/btnConvert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/cardview_dark_background"
        android:textColor="@color/white"
        app:layout_constraintLeft_toRightOf="@+id/spinnerCurrency"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_margin="@dimen/activity_vertical_margin"

        app:layout_constraintTop_toBottomOf="@+id/tilAmount"
        android:text="@string/convert"/>
    <TextView
        android:id="@+id/txtConvertedValue"
        style="@style/TextAppearance.AppCompat.Medium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="0.00"
        android:textSize="25sp"
        android:padding="15dp"
        android:textColor="@color/md_black_1000"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnConvert" />
    <TextView
        android:id="@+id/txtConversionRates"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/currency_rates_for_usd"
        android:textColor="@color/md_blue_900"
        android:textSize="18sp"
        android:paddingStart="10dp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtConvertedValue"
        app:layout_constraintRight_toRightOf="parent"
        />
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewCurrency"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/md_white_1000"
        android:layout_margin="@dimen/activity_vertical_margin"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtConversionRates" />


</androidx.constraintlayout.widget.ConstraintLayout>